manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {ENVIRONMENT}-deployment
  namespace: furry-nebula
spec:
  selector:
    matchLabels:
      app: {ENVIRONMENT}
  replicas: 3
  template:
    metadata:
      labels:
        app: {ENVIRONMENT}
    spec:
      containers:
      - name: {ENVIRONMENT}
        image: {IMAGE}
        ports:
        - containerPort: 80
        volumeMounts:
        - name: {ENVIRONMENT}-data
          mountPath: /app/furry-nebula
      volumes:
      - name: {ENVIRONMENT}-data
        persistentVolumeClaim:
          claimName: nfs-{ENVIRONMENT}
