manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {ENVIRONMENT}
  namespace: furry-nebula
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: {ENVIRONMENT}
