manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {ENVIRONMENT}
  namespace: furry-nebula
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: {HOST}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: {ENVIRONMENT}
              port:
                number: 80
  tls:
    - secretName: {ENVIRONMENT}-tls
      hosts:
        - {HOST}
